# KuiperInfer

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_conv.cpp  bench_layer.cpp  bench_mobilenet.cpp  bench_reshape.cpp  bench_resnet.cpp  bench_rmsnorm.cpp  bench_simd.cpp  bench_unet.cpp  bench_yolo.cpp
cmake/templates/: KuiperInferConfig.cmake.in  KuiperInferConfigVersion.cmake.in
cmake/utils/: ConfigGen.cmake  Dependencies.cmake  Misc.cmake  Summary.cmake  Uninstall.cmake.in  Utils.cmake
demos/: CMakeLists.txt  yolo_test
demos/mobilenet/: mobile.cpp
demos/real_esrgan/: CMakeLists.txt  real_esrgan.cpp
demos/resnet/: resnet_test.cpp
demos/unet/: unet_test.cpp
demos/yolo/: CMakeLists.txt  yolo_test.cpp
include/kuiper/data/: tensor.hpp  tensor_util.hpp
include/kuiper/layer/abstract/: layer.hpp  layer_factory.hpp
include/kuiper/layer/details/: activation.hpp  adaptive_avgpooling.hpp  base_convolution.hpp  batchnorm2d.hpp  cat.hpp  convolution.hpp  deconvolution.hpp  expression.hpp  flatten.hpp  hardsigmoid.hpp  hardswish.hpp  leaky_relu.hpp  linear.hpp  matmul.hpp  maxpooling.hpp  pixelshuffle.hpp  relu.hpp  relu6.hpp  rms_norm.hpp  sigmoid.hpp  silu.hpp  softmax.hpp  upsample.hpp  upsample_bilinear.hpp  upsample_nearest.hpp  view.hpp  yolo_detect.hpp
include/kuiper/layer/details/backup/: winograd.hpp
include/kuiper/parser/: parse_expression.hpp
include/kuiper/runtime/: runtime_attr.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp
include/kuiper/runtime/pnnx/: store_zip.hpp
source/: CMakeLists.txt
source/data/: load_data.cpp  tensor.cpp  tensor_utils.cpp
source/layer/abstract/: layer.cpp  layer_factory.cpp  param_layer.cpp
source/layer/details/: activation.cpp  adaptive_avgpooling.cpp  base_convolution.cpp  batchnorm2d.cpp  cat.cpp  convolution.cpp  deconvolution.cpp  expression.cpp  flatten.cpp  hardsigmoid.cpp  hardswish.cpp  leaky_relu.cpp  linear.cpp  matmul.cpp  maxpooling.cpp  pixelshuffle.cpp  relu.cpp  relu6.cpp  rms_norm.cpp  sigmoid.cpp  silu.cpp  simd.cpp  softmax.cpp  upsample.cpp  upsample_bilinear.cpp  upsample_nearest.cpp  view.cpp  yolo_detect.cpp
source/layer/details/backup/: winograd.cpp
source/parser/: parse_expression.cpp
source/runtime/: runtime_ir.cpp  runtime_op.cpp
source/runtime/pnnx/: ir.cpp  store_zip.cpp
source/utils/time/: time_logging.cpp
test/: CMakeLists.txt
test/test_data/: test_load_data.cpp  test_tensor.cpp  test_utensor.cpp
test/test_layer/: test_average_pooling.cpp  test_batchnorm.cpp  test_cat.cpp  test_conv.cpp  test_deconv.cpp  test_expression.cpp  test_flatten.cpp  test_hardsigmoid.cpp  test_hardswish.cpp  test_layer_factory.cpp  test_leakyrelu.cpp  test_linear.cpp  test_matmul.cpp  test_maxpooling.cpp  test_param_layer.cpp  test_pixelshuffle.cpp  test_relu.cpp  test_reshape.cpp  test_sigmoid.cpp  test_silu.cpp  test_softmax.cpp  test_upsample.cpp  test_view.cpp
test/test_net/: test_classify_net.cpp  test_yolo.cpp
test/test_runtime/: test_attr.cpp  test_param.cpp  test_runtime_ir.cpp
